compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__custom_types__destructure_custom_type_with_mixed_fields_second_unlabelled.snap
---
source: compiler-core/src/fsharp/tests/custom_types.rs
assertion_line: 274
expression: "\ntype Cat {\n  Cat(name: String, Int)\n}\n\nfn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(name: x, ..) = cat\n  let Cat(y, name: x) = cat\n  x\n}\n\n"
---
module rec my.``mod``
type private Cat =
| Cat of name: string * int
    member this.name = 
        match this with
        | Cat.Cat (name, _) -> name
let private go (cat: Cat): string = begin
    let (Cat(x, y)) = cat
    let (Cat(x, _)) = cat
    let (Cat(x, y)) = cat
    x
end
