compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__custom_types__destructure_custom_type_with_named_fields.snap
---
source: compiler-core/src/fsharp/tests/custom_types.rs
assertion_line: 236
expression: "\ntype Cat {\n  Cat(name: String, cuteness: Int)\n}\n\nfn go(cat) {\n  let Cat(x, y) = cat\n  let Cat(name: x, ..) = cat\n  let assert Cat(cuteness: 4, name: x) = cat\n  x\n}\n\n"
---
module rec my.``mod``
type private Cat = { name: string; cuteness: int }
let private go (cat: Cat): string = begin
    let { name = x; cuteness = y } = cat
    let { name = x } = cat
    let { name = x; cuteness = 4 } = cat
    x
end
