compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__custom_types__long_name_variant_without_labels.snap
---
source: compiler-core/src/fsharp/tests/custom_types.rs
expression: "\ntype TypeWithALongNameAndSeveralArguments{\n  TypeWithALongNameAndSeveralArguments(String, String, String, String, String)\n}\n\n\nfn go() {\n  TypeWithALongNameAndSeveralArguments\n}\n"
---
module rec my.``mod``
type private TypeWithALongNameAndSeveralArguments =
| TypeWithALongNameAndSeveralArguments of string * string * string * string * string
    
let private go () = begin
    TypeWithALongNameAndSeveralArguments
end
