compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__custom_types__opaque_type_with_multiple_variants.snap
---
source: compiler-core/src/fsharp/tests/custom_types.rs
expression: "pub opaque type Animal {\n  Cat(goes_outside: Bool)\n  Dog(plays_fetch: Bool)\n}\n"
---
module rec my.``mod``

type Animal =
    private 
    | Cat of goes_outside: bool
    | Dog of plays_fetch: bool
