compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__custom_types__types_must_be_rendered_before_functions.snap
---
source: compiler-core/src/fsharp/tests/custom_types.rs
expression: "\npub fn one() { One }\npub type One { One }\n"
---
module rec my.``mod``
type One =
| One
    
let one () = begin
    One
end
