compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__custom_types__unnamed_fields.snap
---
source: compiler-core/src/fsharp/tests/custom_types.rs
assertion_line: 153
expression: "\ntype Ip{\n    Ip(String)\n}\n\nconst local = Ip(\"0.0.0.0\")\n\nfn build(x) {\n    x(\"1.2.3.4\")\n}\n\nfn go() {\n    build(Ip)\n    Ip(\"5.6.7.8\")\n}\n\nfn destructure(x) {\n  let Ip(raw) = x\n  raw\n}\n"
---
module rec my.``mod``
type private Ip =
| Ip of string
    
let private build (x: string -> 'u14): 'u14 = begin
    x ("1.2.3.4")
end
let private go (): Ip = begin
    build (Ip)
    Ip ("5.6.7.8")
end
let private destructure (x: Ip): string = begin
    let (Ip(raw)) = x
    raw
end
let private local = Ip("0.0.0.0")
